--- a/api/appsettings.Development.json
+++ b/api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=15432;Database=kobogg_db;Username=kobogg_user;Password=!ChangeMe!"
   }
 }
