--- a/backend/api/appsettings.json
+++ b/backend/api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=15432;Database=kobogg_db;Username=kobogg_user;Password=!ChangeMe!"
+  }
 }
