add some base services to encapsulate db access and underlying tables

--- a/backend/api/api.csproj
+++ b/backend/api/api.csproj
@@ -24,7 +24,10 @@
 
     <ItemGroup>
         <Folder Include="Migrations\" />
-        <Folder Include="Modules\User\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include=".config\dotnet-tools.json" />
     </ItemGroup>
 
 </Project>
