--- a/backend/api/appsettings.json
+++ b/backend/api/appsettings.json
@@ -8,5 +8,18 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=15432;Database=kobogg_db;Username=kobogg_user;Password=!ChangeMe!"
+  },
+  "Email": {
+    "Settings": {
+      "DefaultFromEmail": "noreply@kobo.gg",
+      "DefaultFromName": "Kobo.gg"
+    },
+    "Mailcatcher": {
+      "Host": "localhost",
+      "Port": 1025
+    },
+    "Brevo": {
+      "ApiKey": "your-brevo-api-key-here"
+    }
   }
 }
