--- a/backend/api/appsettings.Development.json
+++ b/backend/api/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=15432;Database=kobogg_db;Username=kobogg_user;Password=!ChangeMe!"
+  },
+  "Email": {
+    "Mailcatcher": {
+      "Host": "localhost",
+      "Port": 1025
+    }
   }
 }
