--- a/backend/api.Tests/api.Tests.csproj
+++ b/backend/api.Tests/api.Tests.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\api\api.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\**\*" />
+  </ItemGroup>
+
 </Project>
