--- a/backend/api/api.csproj
+++ b/backend/api/api.csproj
@@ -23,6 +23,7 @@
         </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
         <PackageReference Include="RazorLight" Version="2.3.1" />
+        <PackageReference Include="Testcontainers" Version="4.3.0" />
     </ItemGroup>
 
     <ItemGroup>
