tests are passing the only issue is port allocation

--- a/backend/api/api.csproj
+++ b/backend/api/api.csproj
@@ -40,4 +40,8 @@
         </None>
     </ItemGroup>
 
+    <ItemGroup>
+        <EmbeddedResource Include="Resources\EmailTemplates\*.cshtml" />
+    </ItemGroup>
+
 </Project>
