add high level mailer

--- a/backend/api/api.csproj
+++ b/backend/api/api.csproj
@@ -28,6 +28,7 @@
 
     <ItemGroup>
         <Folder Include="Migrations\" />
+        <Folder Include="Modules\Email\Templates\" />
     </ItemGroup>
 
     <ItemGroup>
