--- a/backend/api/api.csproj
+++ b/backend/api/api.csproj
@@ -29,6 +29,9 @@
     <ItemGroup>
         <Folder Include="Migrations\" />
         <Folder Include="Modules\Email\Templates\" />
+        <Folder Include="Modules\Kobo\DTOs\" />
+        <Folder Include="Modules\Kobo\Http\Request\" />
+        <Folder Include="Modules\Kobo\Http\Response\" />
     </ItemGroup>
 
     <ItemGroup>
