--- a/backend/api/appsettings.Development.json
+++ b/backend/api/appsettings.Development.json
@@ -13,5 +13,14 @@
       "Host": "localhost",
       "Port": 1025
     }
+  },
+  "S3": {
+    "BucketName": "local-development-bucket",
+    "Region": "us-east-1",
+    "AccessKey": "test",
+    "SecretKey": "test",
+    "SignedUrlExpirationMinutes": 30,
+    "ServiceUrl": "http://localhost:4566",
+    "ForcePathStyle": true
   }
 }
