--- a/backend/api/appsettings.json
+++ b/backend/api/appsettings.json
@@ -21,5 +21,12 @@
     "Brevo": {
       "ApiKey": "your-brevo-api-key-here"
     }
+  },
+  "S3": {
+    "BucketName": "your-bucket-name",
+    "Region": "us-east-1",
+    "AccessKey": "your-access-key",
+    "SecretKey": "your-secret-key",
+    "SignedUrlExpirationMinutes": 15
   }
 }
