--- a/backend/api/api.csproj
+++ b/backend/api/api.csproj
@@ -10,6 +10,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AWSSDK.S3" Version="3.7.415.22" />
+        <PackageReference Include="DotNetEnv" Version="3.1.1" />
         <PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
         <PackageReference Include="MailKit" Version="4.11.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
