--- a/compose.yml
+++ b/compose.yml
@@ -47,6 +47,7 @@ services:
       - default
   db:
     image: postgres:17-alpine
+    restart: unless-stopped
     env_file:
       - ./.env.local
     volumes:
