prod backend app is launched on 8080

--- a/gateway/app/default.conf
+++ b/gateway/app/default.conf
@@ -34,7 +34,7 @@ server {
 
     location ~ ^/api {
         include /etc/nginx/snippets/cors.conf;
-        set $upstream http://backend;
+        set $upstream http://backend:8080;
         fastcgi_buffer_size 128k;
         fastcgi_buffers 4 256k;
         proxy_buffer_size 8192k;
