add migrations bundle

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,10 +16,15 @@ RUN dotnet build "api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+# Generate migration bundle
+RUN dotnet tool restore
+RUN dotnet ef migrations bundle --project "api.csproj" --configuration Release --self-contained --force -o /app/migration-bundle --target-runtime linux-x64
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+COPY --from=publish /app/migration-bundle ./migration-bundle
+COPY ./apply-migrations.sh ./
 
 # Switch to root to install kepubify
 USER root
