--- a/compose.yml
+++ b/compose.yml
@@ -34,6 +34,26 @@ services:
       - ASPNETCORE_URLS=http://+:8080
     networks:
       - default
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+
+  # Migrations service that runs once during deployment
+  migrations:
+    image: kobogg/backend:latest
+    env_file:
+      - ./backend/.env.prod
+    command: ./migration-bundle
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - default
+    profiles:
+      - migrations
 
   frontend:
     image: kobogg/frontend:latest
@@ -54,6 +74,12 @@ services:
       - kobogg_db_volume:/var/lib/postgresql/data:rw
     ports:
       - "15432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
 networks:
   default:
