--- a/compose.yml
+++ b/compose.yml
@@ -75,7 +75,7 @@ services:
     ports:
       - "15432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U kobogg_user"]
       interval: 5s
       timeout: 5s
       retries: 5
