--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,7 +21,8 @@
     "framer-motion": "^12.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.4.0"
+    "react-router": "^7.4.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
