apextoolbox initial integration

--- a/backend/api/appsettings.json
+++ b/backend/api/appsettings.json
@@ -28,5 +28,9 @@
     "AccessKey": "your-access-key",
     "SecretKey": "your-secret-key",
     "SignedUrlExpirationMinutes": 15
+  },
+  "ApexToolbox": {
+    "Token": "",
+    "Enabled": true
   }
 }
