--- a/backend/api/appsettings.Development.json
+++ b/backend/api/appsettings.Development.json
@@ -22,5 +22,9 @@
     "SignedUrlExpirationMinutes": 30,
     "ServiceUrl": "http://localhost:4566",
     "ForcePathStyle": true
+  },
+  "ApexToolbox": {
+    "Token": "",
+    "Enabled": true
   }
 }
