final touches and fixes

--- a/backend/.env.prod.example
+++ b/backend/.env.prod.example
@@ -16,3 +16,5 @@ S3__SignedUrlExpirationMinutes=15
 # Application Environment Settings
 ASPNETCORE_ENVIRONMENT=Release
 ASPNETCORE_URLS=http://+:8080
+
+ApexToolbox__Token=token-from-apextoolbox
